--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 #mail server
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp. .com
 spring.mail.username=contact.educationcentre2023@gmail.com
 spring.mail.port=587
 #mat khau o day khong phai la mat khau minh hay dung, phai vao gg/myaccount de lay apppassword
